# settings_guessr

./: .gitignore  Cargo.toml  README.md  index.html  package.json  wasm_bindings.d.ts  wasm_bindings.js  wasm_bindings_bg.wasm  wasm_bindings_bg.wasm.d.ts
.github/workflows/: build.yml  release.yml
settings_guessr/: Cargo.toml
settings_guessr/src/: lib.rs
src/: lib.rs  main.rs
wasm-bindings/: Cargo.toml
wasm-bindings/src/: lib.rs
wasm-bindings/www/: .gitignore  index.html
