[package]
name = "settings_guessr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
flatten-serde-json = { git = "https://github.com/meilisearch/meilisearch" }
