[package]
name = "wasm-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
settings_guessr = { path = "../" }
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6.0"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde_json = "1.0.107"
